# logsmith

./: .gitignore  Cargo.toml  Makefile  README.md
logsmith/: Cargo.toml
logsmith/src/: input_plugin.rs  lib.rs  main.rs  plugins.rs
modules/input-stdin/: Cargo.toml  build.rs
modules/input-stdin/src/: build.rs  lib.rs
