[package]
name = "logsmith"
version = "0.1.0"
authors = ["Ricki Hastings <rickihastings22@gmail.com>"]
edition = "2018"
license = "GNU General Public License v3.0"

[dependencies]
dlopen = "0.1.6"
dlopen_derive = "0.1.3"
config = { path = "../packages/config" }

[lib]
crate-type = ["dylib", "rlib"]
